# tgm_firmware

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml
app/src/: acc.c  acc.h  battery.c  battery.h  ble.c  ble.h  main.c  ppg.c  ppg.h  tgm_service.c  tgm_service.h
boards/byteexplain/a200451/: Kconfig  Kconfig.a200451  README.md  a200451-pinctrl.dtsi  a200451.dts  a200451.yaml  a200451_defconfig  board.yml
boards/byteexplain/pcb00003/: Kconfig  Kconfig.pcb00003  README.md  board.yml  pcb00003-pinctrl.dtsi  pcb00003.dts  pcb00003.yaml  pcb00003_defconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/lis2dtw12/: CMakeLists.txt  Kconfig  lis2dtw12.c
drivers/sensor/maxm86161/: CMakeLists.txt  Kconfig  maxm86161.c
dts/bindings/sensor/: adi,maxm86161.yaml  st,lis2dtw12.yaml
include/app/drivers/: lis2dtw12.h  maxm86161.h
